:construction: Wip seed

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "seed": "node --loader ts-node/esm prisma/seed.ts"
   },
   "scripts": {
-    "prisma-seed": "ts-node prisma/seed.ts",
+    "seed": "ts-node prisma/seed.ts",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
